update post: Hashnode Blogs on GitHub Profile

--- a/cl9v2vagq000909l37wq4730r.md
+++ b/cl9v2vagq000909l37wq4730r.md
@@ -19,9 +19,9 @@ There is an easter-egg on GitHub where you can create a repository with the same
 
 ![image.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1666878851846/lyHjRVPa4.png align="center")
 
-Don't forget to check the "**Add a README file**" box. Create the repository and you'll have a README view on your profile then.
+Don't forget to check the "**Add a README file**" box while creating the repository. Create the repository and you'll have a README view on your main profile page.
 
-#### 2. Add the pattern into `README`
+#### 2. Add the pattern to README
 Add the following snippet somewhere in your `README.md` file.
 
 ```html
@@ -30,7 +30,7 @@ Add the following snippet somewhere in your `README.md` file.
 <!-- BLOGPOSTS:END -->
 ```
 
-That's how the application recognizes where it has to put the list on.
+That's how the application recognizes where it has to put the list.
 
 #### 3. Create the action
 Navigate to `github.com/<your-username>/<your-username>` and open up the "**Actions**" tab. Click "**setup a workflow yourself**" to create a new blank workflow.
@@ -63,7 +63,7 @@ jobs:
           gh_token: ${{ secrets.GITHUB_TOKEN }}
 ```
 
-Replace the `feed_list` value with `<your-domain>/rss.xml`. In my case, It's like:
+Replace the `feed_list` value with `<your-domain>/rss.xml`. In my case, It's like this:
 
 ```yml
 feed_list: "https://imsadra.me/rss.xml"
@@ -81,7 +81,7 @@ You can create your proper cron patterns easier with [Crontab Guru](https://cron
 | Every 30 minutes      | `30 * * * *`  |
 
 ### We're Almost Done!
-To test the result, open up the "**Actions**" tab and run the workflow manually only this time. To do that, select the action we just created from the left-hand side and click "**Run workflow**" drop-down. Finally, press the "**Run workflow**" green button.
+To test the result, open up the "**Actions**" tab and run the workflow manually only this time. To do that, select the action we just created from the left-hand side and click the "**Run workflow**" drop-down. Finally, press the "**Run workflow**" green button.
 
 ![image.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1667116714208/xH7UAH7fA.png align="center")
 
