update post: Persian/Arabic Blogs on Hashnode

--- a/clal8b04c000209l49z7o1dn8.md
+++ b/clal8b04c000209l49z7o1dn8.md
@@ -26,17 +26,19 @@ Since we have three different homepage layouts, we need different snippets for d
 
 #### Stacked Layout & Grid Layout
 ```css
-@import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600&display=swap');.blog-post-card-wrapper .blog-post-card-title , .blog-post-card-brief {
-   direction: rtl;
-   font-family: 'Vazirmatn', sans-serif !important;
+@import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600&display=swap');
+
+.blog-post-card-wrapper .blog-post-card-title , .blog-post-card-brief {
+    direction: rtl;
+    font-family: 'Vazirmatn', sans-serif !important;
 }
   
-  .blog-post-card-wrapper .blog-post-card-meta {
-          direction: rtl;
-  }
+.blog-post-card-wrapper .blog-post-card-meta {
+    direction: rtl;
+}
   
-  .blog-post-card-wrapper .blog-post-card-title {font-weight: 600}
-  .blog-post-card-wrapper .blog-post-card-brief {font-weight: 400}
+.blog-post-card-wrapper .blog-post-card-title {font-weight: 600}
+.blog-post-card-wrapper .blog-post-card-brief {font-weight: 400}
   ```
 
 #### Magazine Layout
@@ -69,20 +71,20 @@ Switch to the "**Articles**" tab to style the contents of each article. For this
     font-family: 'Vazirmatn', sans-serif;
 }
 
-#post-content-wrapper :is(p, blockquote, table, h1, h2, h3, h4, h5, h6, ul, a){
+#post-content-wrapper :is(p, blockquote, table, h1, h2, h3, h4, h5, h6, ul, a) {
     font-family: 'Vazirmatn', sans-serif !important;
     direction: rtl;
 }
 
-#post-content-wrapper p{
+#post-content-wrapper p {
     font-weight: 300;
 }
 
-#post-content-wrapper :is(h1, h2, h3, h4, h5, h6){
+#post-content-wrapper :is(h1, h2, h3, h4, h5, h6) {
     font-weight: 500;
 }
 
-.blog-post-details h1, p{
+.blog-post-details h1, p {
     font-family: 'Vazirmatn', sans-serif !important;
     direction: rtl;
 }
