update post: Persian/Arabic Blogs on Hashnode

--- a/clal8b04c000209l49z7o1dn8.md
+++ b/clal8b04c000209l49z7o1dn8.md
@@ -93,3 +93,7 @@ Once your style is saved, hit "**Publish**" to apply the changes.
 
 ### We're Done!
 Now, hop into your dashboard and start writing in RTL languages. Once you publish the article, it'll be correctly directed and aligned in the wonderful Vazir font.
+
+I've made a team-blog on Hashnode and applied the same implementation. You can find it in the following link.
+
+%[https://imsadrafarsi.hashnode.dev/]
