update post: Persian/Arabic Blogs on Hashnode

--- a/clal8b04c000209l49z7o1dn8.md
+++ b/clal8b04c000209l49z7o1dn8.md
@@ -1,30 +1,32 @@
 # Persian/Arabic Blogs on Hashnode
 
-Lots of my (Iranian) friends left @hashnode just because it doesn't support RTL languages for blogs. However, you can still have your custom CSS stylesheets included with your pages. Therefore, you can use CSS to make your blog RTL-friendly!
+Lots of my (Persian) friends left @hashnode just because it doesn't support RTL languages for blogs. However, you can still have your custom CSS stylesheets included with your pages. Therefore, you can use CSS to make your blog RTL-friendly!
 
 In this tutorial, we're going to use [Vazir](https://fonts.google.com/specimen/Vazirmatn) font for our blog. You can use whatever font you would like.
 
 Here is a preview of what we're going to build at the end of the blog:
 
-- Homepage
-![image.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1668695458007/iTGTyJ1R1.png align="center")
+*   Homepage
+    
+*   Article Page
+    
 
-- Article Page
-![Artboard 3.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1668689146434/pYH1eHc1R.png align="center")
-
-**Note**: In this method, you <u>won't</u> be able to write in both RTL and LTR on the same blog. You can use LTR words inline RTLs though.
+**Note**: In this method, you won't be able to write in both RTL and LTR on the same blog. You can use LTR words inline RTLs though.
 
 **Note**: This method supports dark-theme.
 
-### 1. Enable The "Custom CSS"
-Go to **Dashboard>Appearance**. Scroll all the way down. You'll see the Custom CSS feature that is disabled by default. Enable it and hit "**Update**". Finally, click "**Edit Custom Stylesheet**".
+### 1\. Enable The "Custom CSS"
+
+Go to **Dashboard&gt;Appearance**. Scroll all the way down. You'll see the Custom CSS feature that is disabled by default. Enable it and hit "**Update**". Finally, click "**Edit Custom Stylesheet**".
 
 ![image.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1668689860124/17EbWkZDw.png align="center")
 
-### 2. Homepage Styling
-Since we have three different homepage layouts, we need different snippets for designing the homepage. Choose the one that matches your layout. Make sure you're in the "**Home**" tab then paste the proper snippet. (You can check your homepage layout in "**Dashboard>Appearance**")
+### 2\. Homepage Styling
+
+Since we have three different homepage layouts, we need different snippets for designing the homepage. Choose the one that matches your layout. Make sure you're in the "**Home**" tab then paste the proper snippet. (You can check your homepage layout in "**Dashboard&gt;Appearance**")
 
 #### Stacked Layout & Grid Layout
+
 ```css
 @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600&display=swap');
 
@@ -39,9 +41,10 @@ Since we have three different homepage layouts, we need different snippets for d
   
 .blog-post-card-wrapper .blog-post-card-title {font-weight: 600}
 .blog-post-card-wrapper .blog-post-card-brief {font-weight: 400}
-  ```
+```
 
 #### Magazine Layout
+
 ```css
 @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600&display=swap');
 
@@ -59,7 +62,8 @@ Since we have three different homepage layouts, we need different snippets for d
 }
 ```
 
-### 3. Article Styling
+### 3\. Article Styling
+
 Switch to the "**Articles**" tab to style the contents of each article. For this purpose, paste the following snippet and click "**Save Styles**".
 
 ```css
@@ -89,9 +93,11 @@ Switch to the "**Articles**" tab to style the contents of each article. For this
     direction: rtl;
 }
 ```
+
 Once your style is saved, hit "**Publish**" to apply the changes.
 
 ### We're Done!
+
 Now, hop into your dashboard and start writing in RTL languages. Once you publish the article, it'll be correctly directed and aligned in the wonderful Vazir font.
 
 I've made a team-blog on Hashnode and applied the same implementation. You can find it in the following link.
