update post: Make Money From Open Source

--- a/clc0s132x000008mc0ola5kw0.md
+++ b/clc0s132x000008mc0ola5kw0.md
@@ -8,7 +8,7 @@ I'm not trying to prove that that was not the real value. It obviously is. Your 
 
 ### A Short Story About Myself
 
-One day, I realized that my keyboard's wire was broken apart. It was too old as I was kind of expecting that moment to happen sooner or later. I just thought for a second. I've completed so many projects using you (keyboard).. I've been working on lots of codebases. Of curse, I've got so much experience but why wouldn't I be able to buy myself a new keyboard just to keep working?! Just to keep this routine.
+One day, I realized that my keyboard's wire was broken apart. It was too old as I was kind of expecting that moment to happen sooner or later. I just thought for a second. I've completed so many projects using you (keyboard).. I've been working on lots of codebases. Of course, I've got so much experience but why wouldn't I be able to buy myself a new keyboard just to keep working?! Just to keep this routine.
 
 That was the moment that I was so convinced to quit my dream job, dearest of all time, coding, and look for another job. Something that I could meet my needs with. How romantic.. anyway.
 
