update post: Boosting Sighted Accessibility: Building a Python GitHub Action

--- a/clz8ll6pv000808l6bg5z4k78.md
+++ b/clz8ll6pv000808l6bg5z4k78.md
@@ -10,6 +10,8 @@ tags: github, python, python3, automation, cicd, github-actions, ci-cd, github-a
 
 It's been a couple of months since I created [PyActon](https://pyaction.imsadra.me), an open-source tool that allows you to create GitHub Actions using Python. With this tool, you can install and use any Python package or library within your CI/CD pipelines.
 
+> [The implementation described in this article is live hosted on GitHub.](https://github.com/lnxpy/sighted-action)
+
 You can use it with GitHub's official [`action/cache`](https://github.com/actions/cache) action to cache your action's dependencies. This is helpful when working with environments that have many or large dependencies that take time to load. This way, you can quickly get TensorFlow running inside your pipelines! We're not going to use it today though as our action is quite light and fast in terms of response.
 
 In this article, we'll create a new action using PyAction that triggers when an issue is opened or reopened. It will read the issue data, use [Sighted](https://sighted.vercel.app) to analyze the text in the issue form, and finally, display the result as a comment based on the analysis.
